<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_tablet_android_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_clientes" />
    </group>

    <item android:title="Entre em contato">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_baseline_email_24"
                android:title="@string/menu_contato" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_info" />
        </menu>
    </item>
</menu>
