<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.atmconsultoria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.atmconsultoria.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.atmconsultoria.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

        <fragment
            android:id="@+id/nav_contato"
            android:name="com.example.atmconsultoria.ui.contato.ContatoFragment"
            android:label="@string/menu_contato"
            tools:layout="@layout/fragment_contato" />


        <fragment
            android:id="@+id/nav_info"
            android:name="com.example.atmconsultoria.ui.info.InfoFragment"
            android:label="@string/menu_info"
            tools:layout="@layout/fragment_info" />


</navigation>